# auto-trading-binance

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Plans.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: daily.md
config/: settings.yaml
docs/: ai_strategy_agent.md
docs/strategies/: README.md  v1_momentum_flip_scalper.md  v2_adaptive_scalper.md  v3_smart_momentum_scalper.md  v4_aggressive_momentum_rider.md
scripts/: analyze_missed.py  backtest_all.py  compare_performance.py  correlation.py  daily_analysis.py  paper_report.py  real_report.py  run.sh  set-v10.sh  set-webhook.py  set-webhook.sh  setup.sh  stop.sh  test_gate.sh
src/: main.py
src/backtesting/: backtest.py
src/core/: auto_optimizer.py  config.py  database.py  engine.py  futures_engine.py  llm_provider.py  models.py  paper_report.py  paper_selector.py  paper_trader.py  risk_manager.py  strategy_agent.py  time_filter.py
src/dashboard/: app.py  mobile.py
src/exchange/: binance_client.py  futures_client.py
src/notifications/: notifier.py  webhook.py
src/strategies/: adaptive_scalper.py  aggressive_scalper.py  base.py  combined.py  contrarian_scalper.py  data_driven_scalper.py  ml_strategy.py  orderflow_v13.py  (+9 more)
tests/: conftest.py  test_adaptive_scalper.py  test_aggressive_scalper.py  test_backtest.py  test_binance_client.py  test_derivatives_features.py  test_futures_engine.py  test_llm_provider.py  test_models.py  test_orderbook_features.py  test_orderflow_v13.py  test_paper_selector.py  test_pattern_scalper.py  test_reverse_wrapper.py  test_risk_manager.py  test_risk_status.py  test_scalper.py  test_smart_scalper.py  test_strategy_agent.py  test_technical_strategy.py
(+4 files in other folders)
